src-tauri/build_error_current.txt
    Checking tauri-app v0.1.0 (C:\_new_ai_project\uriLocalShare\src-tauri)
warning: unused import: `Deserialize`
 --> src\lib.rs:2:13
  |
2 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `mdns`
 --> src\p2p.rs:3:16
  |
3 |     gossipsub, mdns, noise, request_response, swarm::NetworkBehaviour, swarm::SwarmEvent, tcp, yamux,
  |                ^^^^

error[E0593]: closure is expected to take 0 arguments, but it takes 1 argument
  --> src\p2p.rs:55:14
   |
55 |             .with_tcp(
   |              ^^^^^^^^ expected closure that takes 0 arguments
...
58 |                 |_| yamux::Config::default(),
   |                 --- takes 1 argument
   |
   = note: required for `{closure@src\p2p.rs:58:17: 58:20}` to implement `IntoMultiplexerUpgrade<Output<Negotiated<TcpStream>>>`
   = note: the full name for the type has been written to 'C:\_new_ai_project\uriLocalShare\src-tauri\target\debug\deps\tauri_app_lib-b0b85326a3c1796e.long-type-14965798469769898847.txt'
   = note: consider using `--verbose` to print the full type name to the console

For more information about this error, try `rustc --explain E0593`.
warning: `tauri-app` (lib) generated 2 warnings
error: could not compile `tauri-app` (lib) due to 1 previous error; 2 warnings emitted
